<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:title="@string/pref_location_title"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:inputType="text"/>


    <ListPreference
        android:defaultValue="@string/pref_units_metric"
        android:title="@string/pref_units_title"
        android:key="@string/pref_units_key"
        android:entries="@array/pref_units_option"
        android:entryValues="@array/pref_units_value" />

    <CheckBoxPreference
        android:defaultValue="@bool/show_notifications_by_default"
        android:title="@string/pref_enable_notifications_title"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:summaryOff="@string/pref_enable_notifications_false" />


</PreferenceScreen>